# cal_tracker

./: .env.example  .gitignore  AGENTS.md  pyproject.toml
bot/: bot_start.py  config.py  loader.py  taskiq_worker.py
bot/handlers/: __init__.py  callbacks.py  chat_member.py  commands.py  end.py  error.py  intake.py  main.py
bot/services/: analytics.py  database.py  formatting.py  llm.py  middleware.py  states.py  tasks.py  user_status.py  voice.py
bot/view/: buttons.py  keyboards.py  messages.py
bot/webapp/: server.py
config/nginx/: au-aiogram-template.au-company.com
config/systemd/: bot.service  taskiq-scheduler.service  taskiq-worker.service
tools/: export_broadcast_chat_ids.py  send_broadcast_campaign.py
webapp/: index.html  package.json
webapp/src/: App.jsx  api.js  main.jsx
