[project]
name = "au_aiogram_template"
version = "0.1.0"
description = "Add your description here"
# Tooling note: this project is managed with uv.
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.25.0",
    "loguru>=0.7.3",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "redis>=7.2.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
